--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "sass": "^1.63.4",
+    "spotify-uri": "^3.0.4",
+    "url": "^0.11.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
